.metals/metals.log
2023.03.23 10:45:38 INFO  Started: Metals version 0.11.11 in workspace 'C:\Users\benja\OneDrive\C\Computer Science Work\2.4 Software Design\Code environment\Softwaredesign_team77' for client Visual Studio Code 1.76.2.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/C:/Users/benja/AppData/Local/Coursier/cache/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.03.23 10:45:40 INFO  time: initialize in 1.7s
2023.03.23 10:45:42 WARN  Build server is not auto-connectable.
2023.03.23 10:45:42 WARN  no build target for: C:\Users\benja\OneDrive\C\Computer Science Work\2.4 Software Design\Code environment\Softwaredesign_team77\src\main\java\softwaredesign\Main.java
2023.03.23 10:45:44 WARN  Running javac-semanticdb failed for file:///C:/Users/benja/OneDrive/C/Computer%20Science%20Work/2.4%20Software%20Design/Code%20environment/Softwaredesign_team77/src/main/java/softwaredesign/Main.java. Output:
C:\Users\benja\OneDrive\C\Computer Science Work\2.4 Software Design\Code environment\Softwaredesign_team77\src\main\java\softwaredesign\Main.java:1: error: semanticdb-javac: unknown flag 'Science'
package softwaredesign;
^
1 error
mrt 23, 2023 10:45:46 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
mrt 23, 2023 10:45:48 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2023.03.23 10:45:53 INFO  running 'C:\Users\benja\OneDrive\C\Computer Science Work\2.4 Software Design\Code environment\Softwaredesign_team77\gradlew.bat --console=plain --init-script C:\Users\benja\AppData\Local\Temp\metals7986671313546341596\init-script.gradle bloopInstall'
2023.03.23 10:46:05 INFO  Starting a Gradle Daemon (subsequent builds will be faster)
2023.03.23 10:46:19 INFO  > Task :configureBloopInstall
2023.03.23 10:46:19 INFO  > Task :bloopInstall
2023.03.23 10:46:19 INFO  
2023.03.23 10:46:19 INFO  Deprecated Gradle features were used in this build, making it incompatible with Gradle 7.0.
2023.03.23 10:46:19 INFO  Use '--warning-mode all' to show the individual deprecation warnings.
2023.03.23 10:46:19 INFO  See https://docs.gradle.org/6.8.1/userguide/command_line_interface.html#sec:command_line_warnings
2023.03.23 10:46:19 INFO  
2023.03.23 10:46:19 INFO  BUILD SUCCESSFUL in 25s
2023.03.23 10:46:19 INFO  2 actionable tasks: 2 executed
2023.03.23 10:46:20 INFO  time: ran 'gradle bloopInstall' in 26s
2023.03.23 10:46:20 INFO  Attempting to connect to the build server...
2023.03.23 10:46:20 INFO  Setting up current java home C:\Program Files\Eclipse Adoptium\jdk-8.0.345.1-hotspot\ in C:\Users\benja\.bloop\bloop.json
2023.03.23 10:46:47 INFO  tracing is disabled for protocol BSP, to enable tracing of incoming and outgoing JSON messages create an empty file at C:\Users\benja\OneDrive\C\Computer Science Work\2.4 Software Design\Code environment\Softwaredesign_team77\.metals\bsp.trace.json or C:\Users\benja\AppData\Local\scalameta\metals\cache\bsp.trace.json
2023.03.23 10:46:47 INFO  time: Connected to build server in 27s
2023.03.23 10:46:47 INFO  Connected to Build server: Bloop v1.5.6
2023.03.23 10:46:48 INFO  time: Imported build in 0.16s
2023.03.23 10:46:50 INFO  time: indexed workspace in 2.22s
2023.03.23 10:46:51 INFO  Deduplicating compilation of software-design-vu-2020 from bsp client 'Metals 0.11.11' (since 4.08s)
2023.03.23 10:46:51 INFO  compiling software-design-vu-2020 (1 java source)
2023.03.23 10:46:51 INFO  compiling software-design-vu-2020 (1 java source)
2023.03.23 10:46:52 INFO  time: compiled software-design-vu-2020 in 0.12s
2023.03.23 10:46:52 ERROR Unexpected error when compiling software-design-vu-2020: 'invalid source release: 11'
2023.03.23 10:46:52 ERROR Unexpected error when compiling software-design-vu-2020: 'invalid source release: 11'
2023.03.23 11:18:12 INFO  Shutting down server
2023.03.23 11:18:12 INFO  shutting down Metals
2023.03.23 11:18:12 INFO  Shut down connection with build server.
2023.03.23 11:18:12 INFO  Exiting server
